// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionGroup AccordionGroup should render correctly by default 1`] = `
.c3 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c4 {
  -webkit-transform: rotate( 360deg );
  -ms-transform: rotate( 360deg );
  transform: rotate( 360deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  padding: 16px;
  font-weight: 600;
}

.c2:hover {
  cursor: pointer;
}

.c0 {
  margin-bottom: 16px;
}

@media screen and (min-width:768px) {
  .c3 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    font-size: 16px;
  }
}

<section
  className="css-vurnku"
>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 1
        </span>
        <div
          className="c4 css-vurnku"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 2
        </span>
        <div
          className="c4 css-vurnku"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup AccordionGroup should render correctly when forceExpanded=1 1`] = `
.c6 {
  height: 1px;
  background-color: rgba(8,13,38,0.48);
}

.c3 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c4 {
  -webkit-transform: rotate( 360deg );
  -ms-transform: rotate( 360deg );
  transform: rotate( 360deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c5 {
  -webkit-transform: rotate( 180deg );
  -ms-transform: rotate( 180deg );
  transform: rotate( 180deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  padding: 16px;
  font-weight: 600;
}

.c2:hover {
  cursor: pointer;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #A7A7C8;
  font-weight: 500;
}

.c8 {
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
}

.c0 {
  margin-bottom: 16px;
}

@media screen and (min-width:768px) {
  .c3 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    padding-bottom: 24px;
  }
}

<section
  className="css-vurnku"
>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 1
        </span>
        <div
          className="c4 css-vurnku"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 2
        </span>
        <div
          className="c5 css-vurnku"
        />
      </div>
      <div
        className="c6"
        height={1}
      />
      <div
        className="c7 css-th0e4m"
      >
        <p
          className="c8"
          color="white"
          fontFamily="Montserrat"
        >
          description 2
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`AccordionGroup AccordionGroup should render correctly when initiallyExpanded=1 1`] = `
.c6 {
  height: 1px;
  background-color: rgba(8,13,38,0.48);
}

.c3 {
  font-size: 14px;
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  background-color: rgba(103,107,139,0.16);
  font-family: "Montserrat",sans-serif;
  border-radius: 4px;
  font-style: normal;
}

.c4 {
  -webkit-transform: rotate( 360deg );
  -ms-transform: rotate( 360deg );
  transform: rotate( 360deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c5 {
  -webkit-transform: rotate( 180deg );
  -ms-transform: rotate( 180deg );
  transform: rotate( 180deg );
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c2 {
  padding: 16px;
  font-weight: 600;
}

.c2:hover {
  cursor: pointer;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: #A7A7C8;
  font-weight: 500;
}

.c8 {
  font-family: "Montserrat",sans-serif;
  color: #FFFFFF;
}

.c0 {
  margin-bottom: 16px;
}

@media screen and (min-width:768px) {
  .c3 {
    font-size: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c3 {
    font-size: 16px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    padding-bottom: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    padding-bottom: 24px;
  }
}

<section
  className="css-vurnku"
>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 1
        </span>
        <div
          className="c4 css-vurnku"
        />
      </div>
    </div>
  </div>
  <div
    className="c0"
  >
    <div
      className="c1 css-nwbphr"
    >
      <div
        className="c2 css-vpgf7p"
        onClick={[Function]}
      >
        <span
          className="c3"
          color="white"
          fontFamily="Montserrat"
          fontSize={
            Array [
              "s",
              "m",
              "m",
            ]
          }
        >
          accordion 2
        </span>
        <div
          className="c5 css-vurnku"
        />
      </div>
      <div
        className="c6"
        height={1}
      />
      <div
        className="c7 css-th0e4m"
      >
        <p
          className="c8"
          color="white"
          fontFamily="Montserrat"
        >
          description 2
        </p>
      </div>
    </div>
  </div>
</section>
`;
